# wpt-sync

./: .bandit  .coveragerc  .dockerignore  .gitignore  .pyup.yml  .travis.yml  00-startup.py  Dockerfile  README.md  docker-compose.yml  newrelic.ini  prod-requirements.txt  pyproject.toml  requirements-dev.txt  requirements-mozautomation.txt  requirements-prod.txt  requirements.txt  run_sync_tasks.sh  setup.cfg  setup.py  sync.ini  sync_prod.ini  test_credentials.ini  travis-install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
ansible/: ansible.cfg  hosts  wptsync_deploy.yml  wptsync_update.yml
config/: gecko_config  gitattributes  lando.toml  newrelic.ini  rabbitmq.conf  ssh_config  wpt-metadata_config  wpt_config
config/dev/: sync.ini
config/ssh/: known_hosts
docker/: Dockerfile.dev  celery_variables.env  gecko_config  get_ini.py  rabbitmq.conf  rabbitmq.list  ssh_config  start_celerybeat.sh  start_celeryworker.sh  start_wptsync.sh  wpt_config
docker/dev/: Dockerfile  Dockerfile_compose  docker-compose.yml
docs/: behaviour.md  deployment.md  user-guide.md
requirements/: deploy.txt  dev-py2.txt  dev-py3.txt  dev.txt  mozautomation.txt  prod.txt  py2.txt
sync/: .bandit  base.py  bug.py  bugcomponents.py  command.py  commit.py  credentials_temp.ini  downstream.py  env.py  errors.py  gh.py  gitutils.py  handlers.py  index.py  landing.py  lando.py  listen.py  load.py  lock.py  log.py  meta.py  model.py  notify.py  pipeline.py  projectutil.py  push.py  repos.py  settings.py  sync.py  taskcluster.py  tasks.py  tc.py  threadexecutor.py  tree.py  trypush.py  types.py  update.py  upstream.py  worker.py  worktree.py  (+1 more)
sync/notify/: __init__.py  (+6 more)
test/: conftest.py  file.py  pytest.ini  test.ini  test_base.py  test_bug.py  test_bug_components.py  test_commit.py  test_downstream.py  test_index.py  test_landing.py  test_listen.py  test_metadata.py  test_notify.py  test_notify_bugs.py  test_phab_listener.py  test_push.py  test_sync.py  test_tc.py  test_try.py  test_upstream.py  test_worktree.py
(+57 files in other folders)
